--- a/notebooks/exploratory/ImportData.ipynb
+++ b/notebooks/exploratory/ImportData.ipynb
@@ -12,6 +12,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wide format "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -169,16 +178,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_datetimes(df):\n",
-    "    return pd.to_datetime(df.columns.values[7:], format='%Y-%m')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -221,532 +220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RegionID</th>\n",
-       "      <th>RegionName</th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Metro</th>\n",
-       "      <th>CountyName</th>\n",
-       "      <th>SizeRank</th>\n",
-       "      <th>time</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>93144</td>\n",
-       "      <td>79936</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1996-04-01</td>\n",
-       "      <td>77300.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14727</th>\n",
-       "      <td>93144</td>\n",
-       "      <td>79936</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1996-05-01</td>\n",
-       "      <td>77300.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29450</th>\n",
-       "      <td>93144</td>\n",
-       "      <td>79936</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1996-06-01</td>\n",
-       "      <td>77300.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44173</th>\n",
-       "      <td>93144</td>\n",
-       "      <td>79936</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1996-07-01</td>\n",
-       "      <td>77300.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58896</th>\n",
-       "      <td>93144</td>\n",
-       "      <td>79936</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1996-08-01</td>\n",
-       "      <td>77400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3827984</th>\n",
-       "      <td>93144</td>\n",
-       "      <td>79936</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2017-12-01</td>\n",
-       "      <td>120300.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3842707</th>\n",
-       "      <td>93144</td>\n",
-       "      <td>79936</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>120300.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3857430</th>\n",
-       "      <td>93144</td>\n",
-       "      <td>79936</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2018-02-01</td>\n",
-       "      <td>120500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3872153</th>\n",
-       "      <td>93144</td>\n",
-       "      <td>79936</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2018-03-01</td>\n",
-       "      <td>121000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3886876</th>\n",
-       "      <td>93144</td>\n",
-       "      <td>79936</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2018-04-01</td>\n",
-       "      <td>121500.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>265 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         RegionID  RegionName     City State    Metro CountyName  SizeRank  \\\n",
-       "4           93144       79936  El Paso    TX  El Paso    El Paso         5   \n",
-       "14727       93144       79936  El Paso    TX  El Paso    El Paso         5   \n",
-       "29450       93144       79936  El Paso    TX  El Paso    El Paso         5   \n",
-       "44173       93144       79936  El Paso    TX  El Paso    El Paso         5   \n",
-       "58896       93144       79936  El Paso    TX  El Paso    El Paso         5   \n",
-       "...           ...         ...      ...   ...      ...        ...       ...   \n",
-       "3827984     93144       79936  El Paso    TX  El Paso    El Paso         5   \n",
-       "3842707     93144       79936  El Paso    TX  El Paso    El Paso         5   \n",
-       "3857430     93144       79936  El Paso    TX  El Paso    El Paso         5   \n",
-       "3872153     93144       79936  El Paso    TX  El Paso    El Paso         5   \n",
-       "3886876     93144       79936  El Paso    TX  El Paso    El Paso         5   \n",
-       "\n",
-       "              time     value  \n",
-       "4       1996-04-01   77300.0  \n",
-       "14727   1996-05-01   77300.0  \n",
-       "29450   1996-06-01   77300.0  \n",
-       "44173   1996-07-01   77300.0  \n",
-       "58896   1996-08-01   77400.0  \n",
-       "...            ...       ...  \n",
-       "3827984 2017-12-01  120300.0  \n",
-       "3842707 2018-01-01  120300.0  \n",
-       "3857430 2018-02-01  120500.0  \n",
-       "3872153 2018-03-01  121000.0  \n",
-       "3886876 2018-04-01  121500.0  \n",
-       "\n",
-       "[265 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_lf[df_lf.RegionName == 79936]"
+    "df_lf.to_csv('../../src/data/zillow_data_lf.csv', index= 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RegionID</th>\n",
-       "      <th>RegionName</th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Metro</th>\n",
-       "      <th>CountyName</th>\n",
-       "      <th>SizeRank</th>\n",
-       "      <th>time</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>90668</td>\n",
-       "      <td>75070</td>\n",
-       "      <td>McKinney</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Dallas-Fort Worth</td>\n",
-       "      <td>Collin</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1996-04-01</td>\n",
-       "      <td>235700.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14724</th>\n",
-       "      <td>90668</td>\n",
-       "      <td>75070</td>\n",
-       "      <td>McKinney</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Dallas-Fort Worth</td>\n",
-       "      <td>Collin</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1996-05-01</td>\n",
-       "      <td>236900.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29447</th>\n",
-       "      <td>90668</td>\n",
-       "      <td>75070</td>\n",
-       "      <td>McKinney</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Dallas-Fort Worth</td>\n",
-       "      <td>Collin</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1996-06-01</td>\n",
-       "      <td>236700.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44170</th>\n",
-       "      <td>90668</td>\n",
-       "      <td>75070</td>\n",
-       "      <td>McKinney</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Dallas-Fort Worth</td>\n",
-       "      <td>Collin</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1996-07-01</td>\n",
-       "      <td>235400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58893</th>\n",
-       "      <td>90668</td>\n",
-       "      <td>75070</td>\n",
-       "      <td>McKinney</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Dallas-Fort Worth</td>\n",
-       "      <td>Collin</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1996-08-01</td>\n",
-       "      <td>233300.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3827981</th>\n",
-       "      <td>90668</td>\n",
-       "      <td>75070</td>\n",
-       "      <td>McKinney</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Dallas-Fort Worth</td>\n",
-       "      <td>Collin</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2017-12-01</td>\n",
-       "      <td>316600.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3842704</th>\n",
-       "      <td>90668</td>\n",
-       "      <td>75070</td>\n",
-       "      <td>McKinney</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Dallas-Fort Worth</td>\n",
-       "      <td>Collin</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>318100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3857427</th>\n",
-       "      <td>90668</td>\n",
-       "      <td>75070</td>\n",
-       "      <td>McKinney</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Dallas-Fort Worth</td>\n",
-       "      <td>Collin</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2018-02-01</td>\n",
-       "      <td>319600.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3872150</th>\n",
-       "      <td>90668</td>\n",
-       "      <td>75070</td>\n",
-       "      <td>McKinney</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Dallas-Fort Worth</td>\n",
-       "      <td>Collin</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2018-03-01</td>\n",
-       "      <td>321100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3886873</th>\n",
-       "      <td>90668</td>\n",
-       "      <td>75070</td>\n",
-       "      <td>McKinney</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Dallas-Fort Worth</td>\n",
-       "      <td>Collin</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2018-04-01</td>\n",
-       "      <td>321800.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>265 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         RegionID  RegionName      City State              Metro CountyName  \\\n",
-       "1           90668       75070  McKinney    TX  Dallas-Fort Worth     Collin   \n",
-       "14724       90668       75070  McKinney    TX  Dallas-Fort Worth     Collin   \n",
-       "29447       90668       75070  McKinney    TX  Dallas-Fort Worth     Collin   \n",
-       "44170       90668       75070  McKinney    TX  Dallas-Fort Worth     Collin   \n",
-       "58893       90668       75070  McKinney    TX  Dallas-Fort Worth     Collin   \n",
-       "...           ...         ...       ...   ...                ...        ...   \n",
-       "3827981     90668       75070  McKinney    TX  Dallas-Fort Worth     Collin   \n",
-       "3842704     90668       75070  McKinney    TX  Dallas-Fort Worth     Collin   \n",
-       "3857427     90668       75070  McKinney    TX  Dallas-Fort Worth     Collin   \n",
-       "3872150     90668       75070  McKinney    TX  Dallas-Fort Worth     Collin   \n",
-       "3886873     90668       75070  McKinney    TX  Dallas-Fort Worth     Collin   \n",
-       "\n",
-       "         SizeRank       time     value  \n",
-       "1               2 1996-04-01  235700.0  \n",
-       "14724           2 1996-05-01  236900.0  \n",
-       "29447           2 1996-06-01  236700.0  \n",
-       "44170           2 1996-07-01  235400.0  \n",
-       "58893           2 1996-08-01  233300.0  \n",
-       "...           ...        ...       ...  \n",
-       "3827981         2 2017-12-01  316600.0  \n",
-       "3842704         2 2018-01-01  318100.0  \n",
-       "3857427         2 2018-02-01  319600.0  \n",
-       "3872150         2 2018-03-01  321100.0  \n",
-       "3886873         2 2018-04-01  321800.0  \n",
-       "\n",
-       "[265 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_lf[df_lf.SizeRank == 2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RegionID</th>\n",
-       "      <th>RegionName</th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Metro</th>\n",
-       "      <th>CountyName</th>\n",
-       "      <th>SizeRank</th>\n",
-       "      <th>1996-04</th>\n",
-       "      <th>1996-05</th>\n",
-       "      <th>1996-06</th>\n",
-       "      <th>...</th>\n",
-       "      <th>2017-07</th>\n",
-       "      <th>2017-08</th>\n",
-       "      <th>2017-09</th>\n",
-       "      <th>2017-10</th>\n",
-       "      <th>2017-11</th>\n",
-       "      <th>2017-12</th>\n",
-       "      <th>2018-01</th>\n",
-       "      <th>2018-02</th>\n",
-       "      <th>2018-03</th>\n",
-       "      <th>2018-04</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>93144</td>\n",
-       "      <td>79936</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>5</td>\n",
-       "      <td>77300.0</td>\n",
-       "      <td>77300.0</td>\n",
-       "      <td>77300.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>119100</td>\n",
-       "      <td>119400</td>\n",
-       "      <td>120000</td>\n",
-       "      <td>120300</td>\n",
-       "      <td>120300</td>\n",
-       "      <td>120300</td>\n",
-       "      <td>120300</td>\n",
-       "      <td>120500</td>\n",
-       "      <td>121000</td>\n",
-       "      <td>121500</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 272 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   RegionID  RegionName     City State    Metro CountyName  SizeRank  1996-04  \\\n",
-       "4     93144       79936  El Paso    TX  El Paso    El Paso         5  77300.0   \n",
-       "\n",
-       "   1996-05  1996-06  ...  2017-07  2017-08  2017-09  2017-10  2017-11  \\\n",
-       "4  77300.0  77300.0  ...   119100   119400   120000   120300   120300   \n",
-       "\n",
-       "   2017-12  2018-01  2018-02  2018-03  2018-04  \n",
-       "4   120300   120300   120500   121000   121500  \n",
-       "\n",
-       "[1 rows x 272 columns]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df.RegionName == 79936]"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
