Updated to files and EDA

--- a/notebooks/exploratory/ImportData.ipynb
+++ b/notebooks/exploratory/ImportData.ipynb
@@ -11,12 +11,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Wide format "
+    "# Wide Format "
    ]
   },
   {
@@ -174,6 +172,13 @@
    ],
    "source": [
     "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Long Format"
    ]
   },
   {
