--- a/notebooks/exploratory/Jon_Mapping.ipynb
+++ b/notebooks/exploratory/Jon_Mapping.ipynb
@@ -274,7 +274,27 @@
     "\n",
     "# Join overlay with nashville map above\n",
     "folium.GeoJson(overlay1).add_to(nash_map)\n",
-    "nash_map"
+    "nash_map\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nash_map.save('index.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import imgkit\n",
+    "\n",
+    "imgkit.from_file('test.html', 'out.jpg')"
    ]
   },
   {
