--- a/notebooks/exploratory/Jon_Modeling.ipynb
+++ b/notebooks/exploratory/Jon_Modeling.ipynb
@@ -1142,7 +1142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from statsmodels.tsa.arima_model import ARIMA, ARMA\n",
+    "from statsmodels.tsa.arima_model import ARIMA\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
     "from statsmodels.tsa.stattools import adfuller\n",
     "from sklearn.metrics import mean_squared_error"
@@ -9257,6 +9257,20 @@
     "ax.set_title('37210 Home Value Forecast')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
