--- a/notebooks/exploratory/2_of_3_final_prophet_model.ipynb
+++ b/notebooks/exploratory/2_of_3_final_prophet_model.ipynb
@@ -144,7 +144,7 @@
    ],
    "source": [
     "# dropping columns that arent needed and using data from 2012 and above \n",
-    "df = pd.read_csv('../../src/data/zillow_data_lf.csv')\n",
+    "df = pd.read_csv('../../src/data/zillow_data.csv')\n",
     "df.time = pd.to_datetime(df.time)\n",
     "df.drop(['RegionID','SizeRank'], axis = 1, inplace = True)\n",
     "df = df[pd.DatetimeIndex(df['time']).year >2011]\n",
@@ -246,41 +246,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_prophet = df_zipcodes.sort_values(by=['MAPE']).reset_index(drop=True).head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "'index=False' is only valid when 'orient' is 'split' or 'table'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-121-1a0524a24029>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_prophet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../../src/data/df_prophet_all_zips.json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mto_json\u001b[0;34m(self, path_or_buf, orient, date_format, double_precision, force_ascii, date_unit, default_handler, lines, compression, index, indent)\u001b[0m\n\u001b[1;32m   2350\u001b[0m         \u001b[0mindent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindent\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2351\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2352\u001b[0;31m         return json.to_json(\n\u001b[0m\u001b[1;32m   2353\u001b[0m             \u001b[0mpath_or_buf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpath_or_buf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2354\u001b[0m             \u001b[0mobj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pandas/io/json/_json.py\u001b[0m in \u001b[0;36mto_json\u001b[0;34m(path_or_buf, obj, orient, date_format, double_precision, force_ascii, date_unit, default_handler, lines, compression, index, indent)\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0morient\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"split\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"table\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 55\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m     56\u001b[0m             \u001b[0;34m\"'index=False' is only valid when 'orient' is 'split' or 'table'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m         )\n",
-      "\u001b[0;31mValueError\u001b[0m: 'index=False' is only valid when 'orient' is 'split' or 'table'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Zipcode</th>\n",
+       "      <th>Home_Value</th>\n",
+       "      <th>Future_Home_Value</th>\n",
+       "      <th>Percent_Increase</th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>MAPE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>37148</td>\n",
+       "      <td>157400.0</td>\n",
+       "      <td>231400.0</td>\n",
+       "      <td>47.013977</td>\n",
+       "      <td>530.15</td>\n",
+       "      <td>0.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37221</td>\n",
+       "      <td>344000.0</td>\n",
+       "      <td>472200.0</td>\n",
+       "      <td>37.267442</td>\n",
+       "      <td>1594.65</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37174</td>\n",
+       "      <td>282200.0</td>\n",
+       "      <td>397100.0</td>\n",
+       "      <td>40.715804</td>\n",
+       "      <td>1758.04</td>\n",
+       "      <td>0.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37115</td>\n",
+       "      <td>189800.0</td>\n",
+       "      <td>307300.0</td>\n",
+       "      <td>61.907271</td>\n",
+       "      <td>1283.39</td>\n",
+       "      <td>0.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>37210</td>\n",
+       "      <td>226500.0</td>\n",
+       "      <td>421800.0</td>\n",
+       "      <td>86.225166</td>\n",
+       "      <td>1633.43</td>\n",
+       "      <td>0.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>37082</td>\n",
+       "      <td>227800.0</td>\n",
+       "      <td>312900.0</td>\n",
+       "      <td>37.357331</td>\n",
+       "      <td>1983.67</td>\n",
+       "      <td>0.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>37015</td>\n",
+       "      <td>161700.0</td>\n",
+       "      <td>215400.0</td>\n",
+       "      <td>33.209647</td>\n",
+       "      <td>1587.20</td>\n",
+       "      <td>0.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>37135</td>\n",
+       "      <td>420400.0</td>\n",
+       "      <td>588100.0</td>\n",
+       "      <td>39.890580</td>\n",
+       "      <td>4120.55</td>\n",
+       "      <td>0.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>37146</td>\n",
+       "      <td>217900.0</td>\n",
+       "      <td>282000.0</td>\n",
+       "      <td>29.417164</td>\n",
+       "      <td>2073.36</td>\n",
+       "      <td>0.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>37190</td>\n",
+       "      <td>135200.0</td>\n",
+       "      <td>195400.0</td>\n",
+       "      <td>44.526627</td>\n",
+       "      <td>1271.56</td>\n",
+       "      <td>0.90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Zipcode  Home_Value  Future_Home_Value  Percent_Increase     RMSE  MAPE\n",
+       "0    37148    157400.0           231400.0         47.013977   530.15  0.32\n",
+       "1    37221    344000.0           472200.0         37.267442  1594.65  0.40\n",
+       "2    37174    282200.0           397100.0         40.715804  1758.04  0.56\n",
+       "3    37115    189800.0           307300.0         61.907271  1283.39  0.70\n",
+       "4    37210    226500.0           421800.0         86.225166  1633.43  0.72\n",
+       "5    37082    227800.0           312900.0         37.357331  1983.67  0.80\n",
+       "6    37015    161700.0           215400.0         33.209647  1587.20  0.80\n",
+       "7    37135    420400.0           588100.0         39.890580  4120.55  0.84\n",
+       "8    37146    217900.0           282000.0         29.417164  2073.36  0.86\n",
+       "9    37190    135200.0           195400.0         44.526627  1271.56  0.90"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_prophet.to_json('../../src/data/df_prophet_all_zips.json', index= 0)"
+    "df_zipcodes.sort_values(by=['MAPE']).reset_index(drop=True).head(10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Choosing Area Codes"
+    "# Choosing Area Codes Within Nashville, TN Area"
    ]
   },
   {
@@ -295,6 +415,17 @@
    "metadata": {},
    "source": [
     "# Optimizing Prophet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are going to use a Facebook Prophet model on each of the zip codes we have decided to hone in on. Each zip code will have its own set of optimized parameters in order to produce the best results. We used 80% of the data to train each model and then tested on the remaining 20% to help us optimize these parameters. RMSE was used as a metric to compare the results of the prophet models to that of the SARIMAX models, but MAPE was used as the metric to optimize our prophet models.\n",
+    "\n",
+    "RMSE and MAPE are defined in our README document.\n",
+    "\n",
+    "The function below optimizes our prophet models and returns the best performing parameters for the zip codes above."
    ]
   },
   {
@@ -353,28 +484,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'changepoint_prior_scale': 0.5,\n",
-       " 'n_changepoints': 30,\n",
-       " 'seasonality_mode': 'multiplicative'}"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "param_37221"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -389,7 +498,6 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -727,6 +835,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then took the optimized set of parameters from above for each zip code and ran it through our function below to produce a forecast. It also outputs the latest home value in our data set along with the forecasted home value five years out in 2023, and the MAPE (Mean Absolute Percentage Error)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 106,
    "metadata": {},
@@ -807,8 +922,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Zip Code 37148"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -828,14 +950,21 @@
      "output_type": "stream",
      "text": [
       "------------ZIP code: 37148 info-------------- \n",
-      "Year 2018 forecasted home value is: $157400\n",
-      "Year 2023 forecasted home value is: $230502\n",
+      "Year 2018 forcasted home value is: $157400\n",
+      "Year 2023 forcasted home value is: $230502\n",
       "The mean absolute percentage error of this model is: 0.38%\n"
      ]
     }
    ],
    "source": [
     "model_37148, forcast_37148 = plot_function(df,37148, param_37148, .8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Zip Code 37221"
    ]
   },
   {
@@ -871,6 +1000,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Zip Code 37174"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 97,
    "metadata": {},
@@ -900,6 +1036,13 @@
    ],
    "source": [
     "model_37174, forcast_37174 = plot_function(df,37174, param_37174, .8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Zip Code 37115"
    ]
   },
   {
@@ -935,6 +1078,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The graph below shows a 95% confidence area around our forcasted values."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 111,
    "metadata": {},
@@ -960,6 +1110,13 @@
     "plt.tight_layout()\n",
     "plt.savefig('../report/figures/37115_Confidence', dpi = 300)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Zip Code 37210"
    ]
   },
   {
@@ -1018,7 +1175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
